--- a/MagicMirrorBlazor/Pages/Index.razor
+++ b/MagicMirrorBlazor/Pages/Index.razor
@@ -2,11 +2,13 @@
 
 <div class="container-fluid">
 	<div class="row">
+		<!--current weather-->
 		<div class="col">
 			<MagicMirrorBlazor.Pages.Components.CurrentWeatherModule />
 		</div>
-		<!--current weather-->
-		<div class="row">
+
+		<!--current date-->
+		<div class="col-auto">
 			<MagicMirrorBlazor.Pages.Components.DateModule />
 		</div>
 	</div>
