Refactored the service project. Smaller update to the worker.

--- a/src/MagicMirrorBlazor/_Imports.razor
+++ b/src/MagicMirrorBlazor/_Imports.razor
@@ -11,5 +11,6 @@
 
 @using Google.Protobuf.WellKnownTypes
 @using Grpc.Core
-@using WeatherClientLib
+@using WeatherClientLib.Services.WeatherService
+@using WeatherClientLib.Services.TimeService
 @using MagicMirrorWorker.Protos
